fix: resolve mypy type errors and improve validation script
- Add virtual environment auto-activation to validate-workflows.sh
- Fix type annotations in test_utils.py (Engine | None handling)
- Fix return type in test_performance.py (tuple[float, bool])
- Fix async generator type in test_homepot_integration.py
- Add missing type stubs to requirements.txt (types-requests, types-psutil)
- Mypy now passes with only import-untyped warnings for internal modules

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -76,5 +76,9 @@ passlib[bcrypt]==1.7.4
 requests==2.32.4
 pydantic[email]==2.11.7
 psycopg2-binary==2.9.9
+
+# Type stubs for mypy
 types-python-jose
 types-passlib
+types-requests
+types-psutil
