fix: update security audit workflow for monorepo structure
- Check for backend/pyproject.toml instead of root pyproject.toml
- Change to backend/ directory before building package
- Ensures package compliance check works with new structure

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -163,10 +163,13 @@ jobs:
     - name: Python package compliance
       run: |
         # Check that pyproject.toml exists and is valid
-        if [ ! -f "pyproject.toml" ]; then
-          echo "Error: pyproject.toml file is missing"
+        if [ ! -f "backend/pyproject.toml" ]; then
+          echo "Error: backend/pyproject.toml file is missing"
           exit 1
         fi
+        
+        # Change to backend directory for package operations
+        cd backend
         
         # Install and check package can be built
         pip install --no-cache-dir build
