--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -4,14 +4,17 @@ warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
 
+# Allow untyped calls for internal modules that don't have type stubs yet
+# These are our own internal modules, not third-party dependencies
+no_implicit_reexport = False
+
 # Ignore missing imports for optional dependencies and future modules
 [mypy-jwt.*]
 ignore_missing_imports = True
 
+# Internal push notification modules - future implementations (not yet created)
+# These are imported conditionally with try/except blocks
 [mypy-homepot_client.push_notifications.apns_macos]
-ignore_missing_imports = True
-
-[mypy-homepot_client.push_notifications.wns_windows]
 ignore_missing_imports = True
 
 [mypy-homepot_client.push_notifications.web_push]
@@ -28,3 +31,7 @@ ignore_missing_imports = True
 
 [mypy-homepot_client.push_notifications.utils.retry_handlers]
 ignore_missing_imports = True
+
+# Existing modules - allow them but suppress untyped warnings
+[mypy-homepot_client.push_notifications.wns_windows]
+follow_imports = silent
