--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -14,9 +14,7 @@ ignore_missing_imports = True
 
 # Internal push notification modules - future implementations (not yet created)
 # These are imported conditionally with try/except blocks
-[mypy-homepot_client.push_notifications.apns_macos]
-ignore_missing_imports = True
-
+# The following modules don't exist yet and are planned for future implementation:
 [mypy-homepot_client.push_notifications.web_push]
 ignore_missing_imports = True
 
@@ -31,7 +29,3 @@ ignore_missing_imports = True
 
 [mypy-homepot_client.push_notifications.utils.retry_handlers]
 ignore_missing_imports = True
-
-# Existing modules - allow them but suppress untyped warnings
-[mypy-homepot_client.push_notifications.wns_windows]
-follow_imports = silent
