--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -9,8 +9,8 @@ on:
   push:
     # Only run on dependency-related file changes
     paths:
-      - 'requirements.txt'
-      - 'pyproject.toml'
+      - 'backend/requirements.txt'
+      - 'backend/pyproject.toml'
       - '.github/workflows/dependency-check.yml'
 
 permissions:
@@ -34,8 +34,8 @@ jobs:
     - name: Install project dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
+        pip install -r backend/requirements.txt
+        pip install -e backend/
 
     - name: Install analysis tools
       run: |
@@ -219,10 +219,10 @@ jobs:
         echo '# Create test environment' >> dependency-report.md
         echo 'python -m venv test-upgrade' >> dependency-report.md
         echo 'source test-upgrade/bin/activate' >> dependency-report.md
-        echo 'pip install -r requirements.txt' >> dependency-report.md
+        echo 'pip install -r backend/requirements.txt' >> dependency-report.md
         echo 'pip install --upgrade <package-name>' >> dependency-report.md
         echo 'pip check  # Look for conflicts' >> dependency-report.md
-        echo 'pytest tests/  # Verify functionality' >> dependency-report.md
+        echo 'pytest backend/tests/  # Verify functionality' >> dependency-report.md
         echo '```' >> dependency-report.md
 
     - name: Check Python version compatibility
@@ -230,7 +230,7 @@ jobs:
         echo "" >> dependency-report.md
         echo "### Python Version Compatibility" >> dependency-report.md
         echo "**Current Python:** $(python --version)" >> dependency-report.md
-        echo "**Supported versions:** 3.9, 3.11 (as per pyproject.toml)" >> dependency-report.md
+        echo "**Supported versions:** 3.9, 3.11 (as per backend/pyproject.toml)" >> dependency-report.md
         echo "Python $(python -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")') compatibility verified" >> dependency-report.md
 
     - name: Generate actionable recommendations
@@ -262,8 +262,8 @@ jobs:
           echo "**Before Any Upgrades:**" >> dependency-report.md
           echo '```bash' >> dependency-report.md
           echo '# 1. Backup current state' >> dependency-report.md
-          echo 'pip freeze > backup-requirements.txt' >> dependency-report.md
-          echo 'git add backup-requirements.txt && git commit -m "Backup: Pre-upgrade state"' >> dependency-report.md
+          echo 'pip freeze > backend/backup-requirements.txt' >> dependency-report.md
+          echo 'git add backend/backup-requirements.txt && git commit -m "Backup: Pre-upgrade state"' >> dependency-report.md
           echo '' >> dependency-report.md
           echo '# 2. Check current dependency health' >> dependency-report.md
           echo 'pip check' >> dependency-report.md
@@ -275,28 +275,28 @@ jobs:
           echo '# 1. For LOW risk packages:' >> dependency-report.md
           echo 'pip install --upgrade <package-name>' >> dependency-report.md
           echo 'pip check  # Verify no conflicts' >> dependency-report.md
-          echo 'pytest tests/  # Quick functionality test' >> dependency-report.md
+          echo 'pytest backend/tests/  # Quick functionality test' >> dependency-report.md
           echo '' >> dependency-report.md
           echo '# 2. For MEDIUM risk packages:' >> dependency-report.md
           echo 'pip install --upgrade <package-name>' >> dependency-report.md
           echo 'pip check' >> dependency-report.md
-          echo 'pytest tests/ -v  # Full test suite' >> dependency-report.md
-          echo 'pytest tests/integration/  # Integration tests if available' >> dependency-report.md
+          echo 'pytest backend/tests/ -v  # Full test suite' >> dependency-report.md
+          echo 'pytest backend/tests/integration/  # Integration tests if available' >> dependency-report.md
           echo '' >> dependency-report.md
           echo '# 3. For HIGH risk packages:' >> dependency-report.md
           echo '# First check release notes and breaking changes!' >> dependency-report.md
           echo 'python -m venv test-major-upgrade' >> dependency-report.md
           echo 'source test-major-upgrade/bin/activate' >> dependency-report.md
-          echo 'pip install -r requirements.txt' >> dependency-report.md
+          echo 'pip install -r backend/requirements.txt' >> dependency-report.md
           echo 'pip install --upgrade <package-name>' >> dependency-report.md
-          echo 'pip check && pytest tests/' >> dependency-report.md
+          echo 'pip check && pytest backend/tests/' >> dependency-report.md
           echo '```' >> dependency-report.md
           echo "" >> dependency-report.md
         fi
         
         echo "**Post-Upgrade Checklist:**" >> dependency-report.md
-        echo "- [ ] Update both \`requirements.txt\` and \`pyproject.toml\`" >> dependency-report.md
-        echo "- [ ] Run complete test suite (\`pytest tests/\`)" >> dependency-report.md
+        echo "- [ ] Update both \`backend/requirements.txt\` and \`backend/pyproject.toml\`" >> dependency-report.md
+        echo "- [ ] Run complete test suite (\`pytest backend/tests/\`)" >> dependency-report.md
         echo "- [ ] Check dependency conflicts (\`pip check\`)" >> dependency-report.md
         echo "- [ ] Test critical application workflows manually" >> dependency-report.md
         echo "- [ ] Update documentation if APIs changed" >> dependency-report.md
@@ -306,8 +306,8 @@ jobs:
         echo "**Emergency Rollback Commands:**" >> dependency-report.md
         echo '```bash' >> dependency-report.md
         echo '# If something breaks after upgrade:' >> dependency-report.md
-        echo 'pip install -r backup-requirements.txt' >> dependency-report.md
-        echo 'pip check && pytest tests/' >> dependency-report.md
+        echo 'pip install -r backend/backup-requirements.txt' >> dependency-report.md
+        echo 'pip check && pytest backend/tests/' >> dependency-report.md
         echo '```' >> dependency-report.md
 
     - name: Upload dependency health report
