fix: Add package-lock.json and fix frontend CI workflow issues
Critical Fixes:
- Add frontend/package-lock.json to repository for reproducible builds
- Update .gitignore to allow frontend/package-lock.json specifically
- Remove emoji from workflow output (encoding issues)

Why package-lock.json is needed:
- Enables npm dependency caching in GitHub Actions
- Ensures consistent dependency versions across environments
- Required for 'npm ci' command (faster, more reliable than 'npm install')
- Industry best practice for applications

Changes to .gitignore:
- Now ignores package-lock.json everywhere EXCEPT frontend/
- Pattern: /**/package-lock.json with !frontend/package-lock.json

Workflow updates:
- Removed emoji characters from echo statements
- Prevents encoding issues in GitHub Actions logs
- Maintains same functionality without special characters

This resolves:
- "Some specified paths were not resolved, unable to cache dependencies"
- Frontend Quality Checks failures
- Security Audit job failures

--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -49,9 +49,9 @@ jobs:
 
       - name: Check bundle size
         run: |
-          echo "📦 Build output size:"
+          echo "Build output size:"
           du -sh dist/
-          echo "📄 Detailed breakdown:"
+          echo "Detailed breakdown:"
           du -h dist/* | sort -h
 
       - name: Run tests (when available)
@@ -104,14 +104,14 @@ jobs:
       - name: Check job results
         run: |
           if [[ "${{ needs.frontend-quality.result }}" == "failure" ]]; then
-            echo "❌ Frontend quality checks failed"
+            echo "Frontend quality checks failed"
             exit 1
           elif [[ "${{ needs.frontend-quality.result }}" == "success" ]]; then
-            echo "✅ Frontend quality checks passed"
+            echo "Frontend quality checks passed"
           fi
           
           if [[ "${{ needs.dependency-audit.result }}" == "failure" ]]; then
-            echo "⚠️ Security audit found issues"
+            echo "Security audit found issues"
           else
-            echo "✅ Security audit passed"
+            echo "Security audit passed"
           fi
