feat: Add complete Vitest testing infrastructure
Installed and configured Vitest with all necessary dependencies:

Testing Libraries Added:
- vitest@3.2.4 - Fast unit test framework
- @vitest/ui@3.2.4 - Interactive test UI
- @vitest/coverage-v8@3.2.4 - Code coverage reporting
- @testing-library/react@16.3.0 - React component testing utilities
- @testing-library/jest-dom@6.9.1 - DOM matchers
- jsdom@25.0.0 - DOM environment (downgraded from 27.x for compatibility)

Key Features:
✓ 4 example tests passing (2 test files)
✓ Code coverage reporting configured
✓ React component testing setup
✓ Coverage excludes: node_modules, tests, config files, dist

Test Commands Available:
- npm run test - Run all tests once
- npm run test:watch - Run tests in watch mode
- npm run test:coverage - Run tests with coverage report

Updated Workflow:
- Removed continue-on-error from test step
- Tests now REQUIRED for PR approval
- Tests run on both Node.js 20.x and 22.x

Coverage Report:
- Button component: 100% coverage (example)
- Utils: 100% coverage
- Overall: 4.74% (will increase as more tests added)

Example tests demonstrate:
- Basic assertions
- Component rendering
- Props validation
- DOM querying

Ready for team to add comprehensive test coverage!

--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -54,9 +54,8 @@ jobs:
           echo "Detailed breakdown:"
           du -h dist/* | sort -h
 
-      - name: Run tests (when available)
-        run: npm run test 2>/dev/null || echo "Tests skipped - vitest not yet configured"
-        continue-on-error: true  # Don't fail if no tests yet
+      - name: Run tests
+        run: npm run test
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
