--- a/.github/workflows/frontend-checks.yml
+++ b/.github/workflows/frontend-checks.yml
@@ -42,6 +42,10 @@ jobs:
         run: npm run lint
         continue-on-error: false
 
+      - name: Check code formatting
+        run: npm run format:check
+        continue-on-error: false
+
       - name: Build production bundle
         run: npm run build
         env:
