refactor: Code quality improvements for Web Push implementation

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -12,12 +12,13 @@ no_implicit_reexport = False
 [mypy-jwt.*]
 ignore_missing_imports = True
 
+# Third-party libraries without type stubs
+[mypy-pywebpush.*]
+ignore_missing_imports = True
+
 # Internal push notification modules - future implementations (not yet created)
 # These are imported conditionally with try/except blocks
 # The following modules don't exist yet and are planned for future implementation:
-[mypy-homepot_client.push_notifications.web_push]
-ignore_missing_imports = True
-
 [mypy-homepot_client.push_notifications.fcm_android]
 ignore_missing_imports = True
 
