--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,11 +1,16 @@
-# Frontend Environment Variables
-# Copy this file to .env.local and update the values
+# HOMEPOT Frontend Environment Variables
+# Copy this file to .env.local and update with your values
 
-# Backend API Base URL
+# Backend API Configuration
 VITE_API_BASE_URL=http://localhost:8000
+VITE_WS_URL=ws://localhost:8000
 
-# API Endpoints (for reference)
-# Auth: ${VITE_API_BASE_URL}/auth/login
-# Sites: ${VITE_API_BASE_URL}/api/sites
-# Devices: ${VITE_API_BASE_URL}/api/devices
-# Dashboard: ${VITE_API_BASE_URL}/api/dashboard
+# API Settings
+VITE_API_TIMEOUT=30000
+
+# Feature Flags
+VITE_ENABLE_WEBSOCKET=true
+VITE_ENABLE_PUSH_NOTIFICATIONS=true
+
+# Development
+VITE_ENABLE_DEBUG_LOGS=false
