--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
     - FCM Linux Integration: fcm-linux-integration.md
     - WNS Windows Integration: wns-windows-integration.md
     - APNs Apple Integration: apns-apple-integration.md
+    - Web Push Integration: web-push-integration.md
   - Technical Guides:
     - Database Guide: database-guide.md
     - Database Management: database-management.md
