--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,6 +30,8 @@ aiohttp>=3.9.0  # For async HTTP requests in push notification providers
 google-auth>=2.23.0  # For Google Cloud/Firebase authentication (FCM Linux)
 google-auth-oauthlib>=1.1.0  # For OAuth2 flows (FCM Linux)
 pyjwt[crypto]>=2.8.0  # For JWT token generation (APNs authentication)
+pywebpush>=1.14.0  # For Web Push notifications (browsers)
+cryptography>=41.0.0  # For VAPID key generation and encryption (Web Push)
 
 # Testing
 pytest>=7.4.0
@@ -71,7 +73,6 @@ jupyter>=1.0.0
 httpx[http2]>=0.25.0  # for testing HTTP clients and APNs HTTP/2 support
 
 passlib[bcrypt]==1.7.4
-# python-jose==3.5.0
 requests==2.32.4
 pydantic[email]==2.11.7
 psycopg2-binary==2.9.9
