feat: Add MQTT push notification provider for IoT/Industrial devices

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,6 +34,21 @@ APNS_TEAM_ID=
 APNS_KEY_ID=
 APNS_AUTH_KEY_PATH=
 
+# Web Push (Modern Browsers) - Chrome/Firefox/Safari/Edge
+WEB_PUSH_VAPID_PRIVATE_KEY=
+WEB_PUSH_VAPID_PUBLIC_KEY=
+WEB_PUSH_VAPID_SUBJECT=mailto:admin@example.com
+
+# MQTT Push (IoT/OT Devices) - Sensors/PLCs/Industrial Controllers
+MQTT_BROKER_HOST=
+MQTT_BROKER_PORT=1883
+MQTT_USERNAME=
+MQTT_PASSWORD=
+MQTT_USE_TLS=false
+MQTT_CLIENT_ID=
+MQTT_QOS=1
+MQTT_RETAIN=false
+
 # WebSocket Settings
 WEBSOCKET_PING_INTERVAL=20
 WEBSOCKET_PING_TIMEOUT=10
