--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -16,6 +16,12 @@ ignore_missing_imports = True
 [mypy-pywebpush.*]
 ignore_missing_imports = True
 
+[mypy-paho.*]
+ignore_missing_imports = True
+
+[mypy-paho.mqtt.*]
+ignore_missing_imports = True
+
 # Internal push notification modules - future implementations (not yet created)
 # These are imported conditionally with try/except blocks
 # The following modules don't exist yet and are planned for future implementation:
