feat: Complete backend-frontend integration with push notifications
Implement comprehensive integration between FastAPI backend and React
frontend with full push notification support across all 5 platforms.

Backend:
- Add Push Notification API endpoints (/api/v1/push/*)
- Support for FCM, WNS, APNs, Web Push, MQTT
- VAPID key management for Web Push
- Subscription management and notification sending
- PushNotificationEndpoint.py (475 lines, 8 endpoints)

Frontend:
- Centralized API service layer (api.js - 430 lines, axios-based)
- Push notification manager (pushNotifications.js - 380 lines)
- Service Worker for Web Push (sw.js - 250 lines)
- Notification settings UI component (NotificationSettings.jsx - 330 lines)
- Web Push subscription handling

Automation:
- ONE-COMMAND integration script (test-integration.sh - 558 lines)
- Auto-setup: dependencies, VAPID keys, environment files, database
- Auto-launch: backend + frontend with health checks
- Process monitoring and graceful shutdown
- Beautiful color-coded terminal output

Documentation:
- Complete integration guide (integration-guide.md - 2000+ lines)
- Engineering TODO with clear priorities (engineering-todo.md - 1500+ lines)
- Updated documentation index
- MkDocs configuration for ReadTheDocs

Fixes:
- Add missing dependencies (asyncio-mqtt, structlog, rich, typer, pyyaml)
- Fix Pydantic V2 configuration (nested env vars with __ delimiter)

Usage: ./scripts/test-integration.sh

Services: Backend :8000, Frontend :5173
All 5 push platforms ready for testing

Files modified: 6
Files added: 8
Total lines: 5000+

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,11 +19,16 @@ redis>=5.0.0
 
 # Real-time Communication
 websockets>=12.0
+asyncio-mqtt>=0.16.0  # For async MQTT client communication
 
 # Utilities
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
+structlog>=23.2.0  # For structured logging
+rich>=13.7.0  # For rich terminal output
+typer>=0.9.0  # For CLI interface
+pyyaml>=6.0.1  # For YAML configuration
 
 # Push Notifications
 aiohttp>=3.9.0  # For async HTTP requests in push notification providers
