--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -36,3 +36,7 @@ ignore_missing_imports = True
 
 [mypy-homepot_client.push_notifications.utils.retry_handlers]
 ignore_missing_imports = True
+
+# Push Notification Endpoint - allow some flexibility for API responses
+[mypy-homepot_client.app.api.API_v1.Endpoints.PushNotificationEndpoint]
+disallow_untyped_defs = False
