docs: Add comprehensive API Testing Guide and fix Pydantic V2 warnings
- Created new API Testing Guide (958 lines) with:
  * Step-by-step manual testing procedures for all endpoints
  * Health, Sites, Agents, Devices, Jobs, and Audit testing
  * Advanced workflow scenarios (site setup, health degradation, bulk ops)
  * Automated testing script example
  * Troubleshooting section and best practices
  * Common testing patterns with jq and curl

- Fixed Pydantic V2 deprecation warnings:
  * Updated schema_extra → json_schema_extra in all models
  * Fixed main.py (3 occurrences in CreateJobRequest, CreateSiteRequest, CreateDeviceRequest)
  * Fixed DevicesEndpoints.py (1 occurrence)
  * Fixed SitesEndpoint.py (1 occurrence)
  * Fixed JobsEndpoints.py (1 occurrence)

- Updated documentation index:
  * Added API Testing Guide to docs/index.md
  * Added to mkdocs.yml navigation under "Getting Started"

This guide complements the existing testing-guide.md by focusing on manual
API validation and system integration testing, helping developers verify
the system works correctly end-to-end.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,7 @@ nav:
     - Development Guide: development-guide.md
     - Engineering TODO: engineering-todo.md
     - Testing Guide: testing-guide.md
+    - API Testing Guide: api-testing-guide.md
     - Monorepo Migration: monorepo-migration.md
   - Frontend Development:
     - CI/CD Pipeline: frontend-ci-cd.md
