--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -79,6 +79,7 @@ jupyter>=1.0.0
 httpx[http2]>=0.25.0  # for testing HTTP clients and APNs HTTP/2 support
 
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 requests==2.32.4
 pydantic[email]==2.11.7
 psycopg2-binary==2.9.9
