feat: Migrate from SQLite to PostgreSQL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,13 @@
 # Copy this file to .env and update with your values
 
 # Database Configuration
-DATABASE_URL=sqlite:///./data/homepot.db
-# For PostgreSQL: postgresql://user:password@localhost:5432/homepot
+# HOMEPOT now uses PostgreSQL for production-ready architecture
+# Development: postgresql://homepot_user:homepot_dev_password@localhost:5432/homepot_db
+# Production: Set secure credentials in production environment
+DATABASE__URL=postgresql://homepot_user:homepot_dev_password@localhost:5432/homepot_db
+
+# Legacy SQLite (for reference, no longer recommended):
+# DATABASE__URL=sqlite:///../data/homepot.db
 
 # Server Configuration
 HOST=0.0.0.0
