--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 sqlalchemy>=2.0.0
-aiosqlite>=0.19.0
+aiosqlite>=0.19.0  # SQLite async driver (for testing)
+asyncpg>=0.29.0  # PostgreSQL async driver (production)
 alembic>=1.12.0
+psycopg2-binary==2.9.9  # PostgreSQL sync driver (backup)
 
 # Authentication and Security
 passlib[argon2]>=1.7.4
