feat: Add PostgreSQL support to Docker setup

--- a/.env.example
+++ b/.env.example
@@ -19,11 +19,21 @@ WORKERS=4
 # ====================================
 # Database Settings
 # ====================================
-DATABASE__URL=sqlite:///./data/homepot.db
-# For PostgreSQL: postgresql://user:password@localhost/dbname
+# PostgreSQL (recommended for production)
+DATABASE__URL=postgresql://homepot_user:homepot_dev_password@localhost:5432/homepot_db
+# For SQLite (testing only): sqlite:///./data/homepot.db
 DATABASE__ECHO_SQL=False
 DATABASE__POOL_SIZE=5
 DATABASE__MAX_OVERFLOW=10
+
+# ====================================
+# Docker Compose PostgreSQL Settings
+# ====================================
+# Used by docker-compose.yml to configure PostgreSQL container
+POSTGRES_DB=homepot_db
+POSTGRES_USER=homepot_user
+POSTGRES_PASSWORD=homepot_dev_password
+POSTGRES_PORT=5432
 
 # ====================================
 # Authentication & Security
