feat: add complete website automation and documentation for frontend developers
Add comprehensive tooling and documentation to enable frontend developers
to easily start and test the complete HOMEPOT website with backend integration.

## Changes

### New Scripts
- **scripts/start-complete-website.sh**: Automated startup for backend + frontend
  - Checks prerequisites (Python, Node.js, PostgreSQL)
  - Verifies port availability (8000, 5173)
  - Activates virtual environment and starts services
  - Opens browser automatically
- **scripts/stop-website.sh**: Clean shutdown of both services
- **scripts/README.md**: Comprehensive guide for all scripts
  - Usage instructions for each script
  - Troubleshooting common issues
  - Virtual environment and dependency notes
  - Quick reference for frontend developers

### Documentation Updates
- **README.md**: Added "For Frontend Developers" quick start section
  - One-command website startup
  - Test credentials and URLs
  - Links to detailed guides
- **docs/complete-website-setup.md**: Enhanced with important notes
  - Added PostgreSQL to prerequisites
  - Documented bcrypt 4.1.3 requirement
  - Explained compatibility issue with passlib
- **docs/website-testing-guide.md** (moved from root):
  - Relocated to docs/ directory for consistency
  - Updated status: authentication now working
  - Added test credentials section
- **mkdocs.yml**: Added website-testing-guide.md to navigation

### Dependency Fix
- **backend/requirements.txt**: Pinned bcrypt==4.1.3
  - Version 5.x has breaking changes with passlib
  - Prevents "password cannot be longer than 72 bytes" error
  - Critical for authentication to work

## Testing

✅ Complete website tested and verified working:
- Backend API responding on http://localhost:8000
- Frontend rendering on http://localhost:5173
- PostgreSQL database connected (3 sites, 12 devices)
- Authentication working (test@homepot.com / Test123!)
- Dashboard displaying real data from database

## Purpose

Make 

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,7 @@ nav:
       - Quick Start: getting-started.md
       - Running Locally: running-locally.md
       - Complete Setup: complete-website-setup.md
+      - Website Testing: website-testing-guide.md
       - Integration Guide: integration-guide.md
   
   - User Guides:
