--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ psycopg2-binary==2.9.9  # PostgreSQL sync driver (backup)
 
 # Authentication and Security
 passlib[argon2]>=1.7.4
+bcrypt==4.1.3  # Pinned for passlib compatibility (v5.x has breaking changes)
 python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
 
