--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "asyncio-mqtt>=0.16.0",
     "cryptography>=41.0.0",
     "python-jose[cryptography]>=3.3.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[argon2]>=1.7.4",
+    "bcrypt==4.1.3",  # Pinned for passlib compatibility (v5.x has breaking changes)
     "python-multipart>=0.0.6",
     "structlog>=23.2.0",
     "rich>=13.7.0",
