--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ psycopg2-binary==2.9.9  # PostgreSQL sync driver (backup)
 
 # Authentication and Security
 passlib[argon2]>=1.7.4
+bcrypt==4.1.3  # Pinned for passlib compatibility (v5.x has breaking changes)
 python-jose[cryptography]>=3.3.0
 python-multipart>=0.0.6
 
@@ -80,8 +81,6 @@ ipython>=8.17.0
 jupyter>=1.0.0
 httpx[http2]>=0.25.0  # for testing HTTP clients and APNs HTTP/2 support
 
-passlib[bcrypt]==1.7.4
-bcrypt==4.0.1
 requests==2.32.4
 pydantic[email]==2.11.7
 psycopg2-binary==2.9.9
