docs: Add AI Infrastructure implementation plan (native deployment)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,6 +149,7 @@ nav:
   - AI & Analytics:
       - Executive Summary: ai-roadmap-executive-summary.md
       - Full Roadmap: ai-roadmap.md
+      - Phase 3 Implementation: ai-infrastructure.md
   
   - Reference:
       - Visual Examples: visual-examples.md
