(fix/auth-validation-error-handling)
- Fix Logic Bug in Login Endpoint
- Secure Delete Endpoint
- Implement Role Assignment
- Fix Login Cookie Error
- Admin Creation Utility
- Documentation Updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ nav:
       - Device Metrics Collection: device-metrics-collection.md
   
   - API Reference:
+      - Authentication: user-authentication-api.md
       - Devices:
           - Get Devices by Site: devices-by-site-endpoint.md
   
