--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ nav:
       - Full Roadmap: ai-roadmap.md
       - Phase 3 Implementation: ai-infrastructure.md
       - Backend Analytics: backend-analytics.md
+      - Frontend Analytics Integration: frontend-analytics-integration.md
   
   - Reference:
       - Visual Examples: visual-examples.md
