--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,8 @@ nav:
       - Executive Summary: ai-roadmap-executive-summary.md
       - Full Roadmap: ai-roadmap.md
       - Phase 3 Implementation: ai-infrastructure.md
+      - Backend Analytics: backend-analytics.md
+      - Frontend Analytics Integration: frontend-analytics-integration.md
   
   - Reference:
       - Visual Examples: visual-examples.md
