feat: Developer tooling for 3-5 day data collection runs
- One-command startup (scripts/start_data_collection.sh)
  * Pre-flight checks: venv, .env, database connectivity
  * Shows current data collection status
  * Starts uvicorn with auto-reload

- Automated validation (backend/utils/validate_data_collection.py)
  * Checks all 8 analytics tables for data freshness
  * Validates data quality (no nulls, valid ranges)
  * Detects collection gaps (>1 hour interruptions)
  * Color-coded output (green/yellow/red)
  * JSON export for CI/CD integration
  * Configurable min-days threshold (default: 3 days)

- Developer documentation (docs/data-collection-guide.md)
  * Quick start guide
  * Expected collection rates per table
  * Troubleshooting section
  * Success criteria checklist
  * Added to mkdocs.yml for Read the Docs

Follows team conventions:
- Bash scripts in /scripts
- Python utilities in /backend/utils

This makes it trivial for developers to collect training data:
  ./scripts/start_data_collection.sh
  python backend/utils/validate_data_collection.py

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
       - Full Roadmap: ai-roadmap.md
       - Infrastructure Implementation: ai-infrastructure.md
       - Data Collection: analytics-data-collection.md
+      - Data Collection Guide: data-collection-guide.md
       - Example Data: analytics-example-data.md
       - Backend Analytics: backend-analytics.md
       - Frontend Analytics Integration: frontend-analytics-integration.md
