fix: resolve strict type checking errors and syntax issues
- Fix syntax error in main.py
- Resolve mypy errors in analytics_service.py, failure_predictor.py, and job_scheduler.py
- Fix SQLAlchemy type mismatches in SiteSchedulesEndpoint.py
- Update .flake8 and mypy.ini configurations
- Apply formatting with black and isort

--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -3,6 +3,7 @@ python_version = 3.12
 warn_return_any = True
 warn_unused_configs = True
 disallow_untyped_defs = True
+plugins = sqlalchemy.ext.mypy.plugin
 
 # Allow untyped calls for internal modules that don't have type stubs yet
 # These are our own internal modules, not third-party dependencies
